--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>
 
         </title>
-        
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="OrderSummaryComponent/CSS/OSC.css" rel="stylesheet" type="text/css">
     </head>
     <body>
