--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <body>
         <svg xmlns="http://www.w3.org/2000/svg" width="1440" height="437"><path fill="#D6E1FF" fill-rule="evenodd" d="M0 349.974c218.558 116.035 460.05 116.035 724.475 0s502.933-116.035 715.525 0V0H0v349.974z"/></svg>
     <div class="bx">
-            <img src="Images/illustration-hero.svg" class="img1">
+            <img src="images/illustration-hero.svg" class="img1">
             <h2>Order Summary</h2>
             <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
         <div class="bx2">
-                <img src="Images/icon-music.svg" class="img2">
+                <img src="images/icon-music.svg" class="img2">
                 <p class="p1">Annual Plan</p>
                 <p class="p2">$59.99/year</p>
             <div class="chng">
